Changes from 1.8.4 to 1.8.6
---------------------------

** Bug
    * [FELIX-4884] - listConfigurations should return null if no configuration is found


Changes from 1.8.2 to 1.8.4
---------------------------

** Bug
    * [FELIX-4846] - Wrong exception type in list operation
    * [FELIX-4851] - ConfigAdmin only forwards ConfigurationEvents to ConfigurationListeners which are provided by bundles that are in state ACTIVE
    * [FELIX-4855] - ConfigAdmin does not update ManagedServiceFactory on framework restart


Changes from 1.8.0 to 1.8.2
----------------------------

** Bug
    * [FELIX-4302] - Config Admin can create illegal names on windows
    * [FELIX-4360] - Ensure ordered property values in configurations
    * [FELIX-4362] - Security ConfigAdmin permissions are inherited on the stack
    * [FELIX-4385] - NPE in Configuration Admin Service when deleting configuration
    * [FELIX-4408] - CaseInsensitiveDictionary is platform/locale dependant
    * [FELIX-4566] - Consistency in PersistenceManager and Cache is not guaranteed

** Improvement
    * [FELIX-4316] - Packages imported dynamically should also be imported statically with an optional flag
    * [FELIX-4811] - Optimize ConfigurationManager#listConfigurations


Changes from 1.6.0 to 1.8.0
----------------------------

** Bug
    * [FELIX-3360] - Bundle location is statically set for dynamically bound bundles
    * [FELIX-3762] - NPE in UpdateConfiguration#run
    * [FELIX-3820] - Possible NPE in ConfigAdmin after shutting down when accessed by bad behaving bundles
    * [FELIX-3823] - ConfigAdmin should explicitely unregister services
    * [FELIX-4165] - FilePersistenceManager fails to rename configuration file
    * [FELIX-4197] - [CM] Always check permission on Configuration.get/setBundleLocation
    * [FELIX-4238] - Unnecessary re-initialization of PersistenceManagers in configadmin

** Improvement
    * [FELIX-4039] - Add Permissions file in ConfigAdmin bundle 

** Task